--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,8 +27,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: gradle build
+        run: docker build -t dockeraction:1.0.0 .
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: gradle clean apiFeatures -Ptags="@Calculator"
+        run: docker run dockeraction:1.0.0 apiFeatures -Ptags="@Calculator"
